Subject: API 경로 수정 및 네비게이션 성능 개선
API 수정: 사용자 정보 조회 엔드포인트 오타 수정 (/user/me → /users/me)

라우팅 일치: 헤더의 네비게이션 경로를 라우터 설정에 맞춰 변경 (/posts, /user)

SPA 최적화: 페이지 전환 시 전체 새로고침 방지를 위해 <a> 태그를 <Link> 컴포넌트로 교체